# rhubarb-lip-sync

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.adoc  README.md  package-xcframework.sh  pyproject.toml  test_rhubarb.py
audio_samples/: sample_transcription.txt  sample_transcription2.txt
build-python/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
build-python/rhubarb/: Makefile  cmake_install.cmake
build-whisper/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
build-whisper/rhubarb/: Makefile  appInfo.cpp  cmake_install.cmake  rhubarb  runTests
img/: lisa.afdesign
python/rhubarb/: __init__.py
rhubarb/: CMakeLists.txt
rhubarb/src/animation/: ShapeRule.cpp  animationRules.cpp  animationRules.h  mouthAnimation.cpp  mouthAnimation.h  shapeShorthands.h  staticSegments.cpp  timingOptimization.cpp  timingOptimization.h
rhubarb/src/audio/: OggVorbisFileReader.cpp  SampleRateConverter.cpp
rhubarb/src/capi/: Rhubarb.cpp  Rhubarb.h  module.modulemap
rhubarb/src/core/: Shape.cpp  Shape.h
rhubarb/src/lib/: rhubarbLib.cpp  rhubarbLib.h
rhubarb/src/python/: bindings.cpp
rhubarb/src/recognition/: BlendshapeTimeline.cpp  BlendshapeTimeline.h  PocketSphinxRecognizer.cpp  PocketSphinxRecognizer.h  WhisperPocketSphinxRecognizer.cpp  WhisperPocketSphinxRecognizer.h  WhisperRecognizer.cpp  WhisperRecognizer.h  cmuDictionary.cpp  cmuDictionary.h  g2p.cpp  pocketSphinxTools.cpp  (+3 more)
swift/: .gitignore  INTEGRATION.md  Package.swift  README.md
(+7 files in other folders)
